--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
 							<ul class="feature-icons">
 								<li class="icon solid fa-wrench">Ferretería</li>
 								<li class="icon solid fa-shopping-basket">Abarrotes</li>
-								<li class="icon solid fa-prescription-bottle-alt">Farmácias</li>
+								<li class="icon solid fa-prescription-bottle-alt">Farmacias</li>
 								<li class="icon solid fa-shopping-cart">Comerciantes</li>
 								<li class="icon solid fa-car">Gasolineras</li>
 								<li class="icon solid fa-utensils">Restaurant</li>
@@ -104,7 +104,7 @@
 							<h2>Contacto</h2>
 						</header>
 						<div class="content">
-							<p><strong>¿Tienes alguna consulta o dúda?</strong> Llena el siguiénte formulário y nosotros nos pondrémos en contácto contigo a la brevedad</p>
+							<p><strong>¿Tienes alguna consulta o duda?</strong> Llena el siguiénte formulario y nosotros nos pondremos en contácto contigo a la brevedad</p>
 							<form id="formContact">
 								<div class="fields">
 									<div class="field half">
@@ -117,10 +117,10 @@
 										<label for="demo-category">Tipo de servicio</label>
 										<select name="demo-category" id="categoria">
 											<option value="">-</option>
-											<option value="1">Información de para ventas Módulos Microsip</option>
+											<option value="1">Información de para ventas modulos Microsip</option>
 											<option value="1">Desarrollos personalizados</option>
 											<option value="1">Soporte técnico</option>
-											<option value="1">Servicio al Cliente</option>
+											<option value="1">Servicio al cliente</option>
 										</select>
 									</div>
 									<div class="field">
@@ -144,7 +144,7 @@
 								</li>
 								<li>
 									<h3>Dirección</h3>
-									<span>1234</span>
+									<span>Boulevard Ortíz Mena #125 Altos, Colonia Centro</span>
 								</li>
 								<li>
 									<h3>Síguenos en :</h3>
