--- a/index.html
+++ b/index.html
@@ -41,6 +41,7 @@
 								<li><a href="https://www.facebook.com/SicMicrosip" target="_blank" class="icon brands fa-facebook-f"><span class="label">Facebook</span></a></li>
 								<li><a href="https://www.instagram.com/sic.ws/" target="_blank" class="icon brands fa-instagram"><span class="label">Instagram</span></a></li>
 								<li><a href="https://www.linkedin.com/company/sicws" target="_blank" class="icon brands fa-linkedin-in"><span class="label">LinkedIn</span></a></li>
+								<li><a href="https://www.google.com.mx/maps/@26.92607,-105.6662471,3a,75y,223.45h,101.39t/data=!3m6!1e1!3m4!1sJ7VbUjQsXrMB5W58rft9pw!2e0!7i13312!8i6656" target="_blank"  class="icon solid fa-map-marker-alt"><span class="label">Map</span></a></li>
 								<!-- <li><a href="#" class="icon brands fa-twitter"><span class="label">Twitter</span></a></li> -->
 							</ul>
 							<ul class="actions">
@@ -58,10 +59,12 @@
 							<h2>Sistemas de información y Consultoría Web y Software</h2>
 						</header>
 						<div class="content">
-							<p><strong>Somos una empresa </strong>
+							<p style="margin: 0;"><strong>Somos una empresa </strong>
 								comprometida al servicio integral en el ámbito de Tecnologías de la
 								Información y Comunicaciones con apoyo de los sistemas Microsip y diverso software administrativo.
+
 							</p>
+							<span class="image fit"><img src="images/microsip.png" alt=""></span>
 							<span class="image main"><img src="images/logo.svg" alt=""></span>
 						</div>
 					</section>
@@ -120,7 +123,7 @@
 											<option value="1">Información de para ventas modulos Microsip</option>
 											<option value="1">Desarrollos personalizados</option>
 											<option value="1">Soporte técnico</option>
-											<option value="1">Servicio al cliente</option>
+											<option value="1">Buzon y sugerencias</option>
 										</select>
 									</div>
 									<div class="field">
@@ -140,11 +143,11 @@
 								</li>
 								<li>
 									<h3>Teléfonos</h3>
-									<stron>(627) 5227017 y (627) 5221731</stron>
+									<span style="color: white;">(627) 5227017 y (627) 5221731</span>
 								</li>
 								<li>
 									<h3>Dirección</h3>
-									<span>Boulevard Ortíz Mena #125 Altos, Colonia Centro</span>
+									<span style="color: white;">Boulevard Ortíz Mena #125 Altos, Colonia Centro</span>
 								</li>
 								<li>
 									<h3>Síguenos en :</h3>
@@ -152,6 +155,7 @@
 										<li><a href="https://www.facebook.com/SicMicrosip" target="_blank" class="icon brands fa-facebook-f"><span class="label">Facebook</span></a></li>
 										<li><a href="https://www.instagram.com/sic.ws/" target="_blank" class="icon brands fa-instagram"><span class="label">Instagram</span></a></li>
 										<li><a href="https://www.linkedin.com/company/sicws" target="_blank" class="icon brands fa-linkedin-in"><span class="label">LinkedIn</span></a></li>
+										<li><a href="https://www.google.com.mx/maps/@26.92607,-105.6662471,3a,75y,223.45h,101.39t/data=!3m6!1e1!3m4!1sJ7VbUjQsXrMB5W58rft9pw!2e0!7i13312!8i6656" target="_blank"  class="icon solid fa-map-marker-alt"><span class="label">Map</span></a></li>
 
 									</ul>
 								</li>
