--- a/index.html
+++ b/index.html
@@ -123,7 +123,7 @@
 											<option value="1">Información de para ventas modulos Microsip</option>
 											<option value="1">Desarrollos personalizados</option>
 											<option value="1">Soporte técnico</option>
-											<option value="1">Buzon y sugerencias</option>
+											<option value="1">Buzón de quejas y sugerencias</option>
 										</select>
 									</div>
 									<div class="field">
